# color-management-exercises

./: .gitmodules  CMakeLists.txt  macros.xlsm
src/: CMakeLists.txt  data.qrc  main.cpp
